# dmitry-events

./: .gitignore  README.md  docker-compose.yaml  entrypoint.sh  env_sample  pyproject.toml  pytest.ini  server.Dockerfile
.github/workflows/: integration.yaml
scripts/: export-schema.sh
src/: manage.py
src/apps/base/api/: mixins.py
src/apps/events/: admin.py  apps.py  models.py  signals.py
src/apps/events/api/: exceptions.py  filters.py  paginators.py  permissions.py  serializers.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_alter_ticket_unique_together.py
src/apps/events/tests/: test_buy_ticket.py
src/dmitry_project/: asgi.py  settings.py  urls.py  wsgi.py
src/events_project/: asgi.py  settings.py  settings_test.py  spectacular_settings.py  urls.py  wsgi.py
