[tool.poetry]
name = "events-project"
version = "0.1.0"
description = ""
authors = ["Ruslan Korneev <ruslan@kortechs.io>"]
readme = "README.md"

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
pre-commit = "^2.20.0"
django-extensions = "^3.2.1"
djangorestframework-camel-case = "^1.3.0"
drf-spectacular = "^0.24.2"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
django-redis = "^5.2.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
django-stubs = "^1.13.0"
djangorestframework-stubs = "^1.8.0"
mypy = "^0.991"
ipython = "^8.6.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = '''(?x)(
    .*migrations/.*\.py$
)'''
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
[tool.django-stubs]
django_settings_module = "src.altaport.settings"
ignore_missing_model_attributes = true

[tool.poetry.scripts]
events = "src.manage:main"
